fixed alignmens

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ img {
 
 main {
 	display: grid;
-	width: 70%;
+	width: 85%;
 	max-width: 700px;
 	gap: 4rem;
 	min-width: 340px;
